--- a/css/main.css
+++ b/css/main.css
@@ -612,6 +612,11 @@
   .marq {
     height: 75px;
   }
+
+  .menu-content nav li > a {
+    text-decoration: none;
+    color: #000000;
+  }
 }
 
 @media screen and (max-width: 468px) {
