committing second time

--- a/css/contact.css
+++ b/css/contact.css
@@ -400,6 +400,16 @@ footer {
   color: #fff;
 }
 
+.footer-communication .common-style button a {
+  color: var(--bgcolor1);
+  text-decoration: none;
+  transition: color 0.2s ease-in-out;
+}
+
+.footer-communication .common-style button:hover a {
+  color: #000;
+}
+
 .footer-communication .common-style .footer-text {
   display: flex;
   flex-direction: column;
